<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/allah_names"
        android:icon="@drawable/allah"
        android:title="@string/title_names" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_book"
        android:title="@string/title_verse" />

    <item
        android:id="@+id/navigation_dua"
        android:icon="@drawable/dua"
        android:title="@string/title_dua" />
    <!--<item-->
        <!--android:id="@+id/navigation_lecture"-->
        <!--android:icon="@drawable/ic_teach"-->
        <!--android:title="@string/title_lec" />-->

</menu>
